--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.7",
     "buffer": "^6.0.3",
     "chart.js": "^3.5.1",
+    "firebase": "^10.11.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-chartjs-2": "^3.0.4",
